Add Markdown support

--- a/templates/view.html
+++ b/templates/view.html
@@ -10,7 +10,7 @@
         <a class="edit-link" href="/edit/{{.Title}}">Edit</a>
     </div>
     <div class="page-content">
-        <div class="wiki-content">{{printf "%s" .Body}}</div>
+        <div class="wiki-content">{{.Body}}</div>
     </div>
 </div>
 </body>
