--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <head>
     <title>Wiki: Home</title>
-    <link rel="stylesheet" type="text/css" href="/static/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
 <body>
