--- a/templates/view.html
+++ b/templates/view.html
@@ -1,12 +1,13 @@
 <head>
     <title>Wiki: {{.Title}}</title>
-    <link rel="stylesheet" type="text/css" href="/static/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
 <body>
 <div class="container">
     <div class="page-header">
         <h1>{{.Title}}</h1>
+        <a class="edit-link" href="/">Home</a>
         <a class="edit-link" href="/edit/{{.Title}}">Edit</a>
     </div>
     <div class="page-content">
